[package]
name = "rmqtt-server"
version = "0.1.0"
description = "Neon MQTT Server Adapter"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1"
rmqtt = { version = "0.16", features = ["ws", "tls", "plugin", "msgstore"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
once_cell = "1.0"
serde_json = "1.0"
